#src/scss/style.scss
/* ... */
/**************skills**********/
.skills {
    padding: $padding-desktop;
        &-title {
            padding: 0 0 20px 0;
            .headline {
                @include healine-desktop;
            }
        }
        &-text { 
            font-size: $fz-text-desktop;
        }
    .container {
        position: relative;
        height: 500px;
        z-index: 0;
        .card {
            position: absolute;
            top: 20%;
            left: 50%;
            transform: translate(-50%,calc(90px * var(--i))) rotate(40deg) skew(-20deg,-10deg);
            width: 13.5%;
            max-width: 205px;
            height: 250px;
            border-radius: 5px;
            background: $secondary-color;
            @include display-center;
            box-shadow: 25px 25px 25px rgba(0,0,0,0.2);
            z-index: calc(-1 * var(--i));
            transition: 1s;
            .progressbar {
                transform-origin: center;
                transform: rotate(-90deg);
                transition: stroke-dashoffset 3s;
            }
            &:nth-child(1) {
                opacity: 1;
                transition: 1.5s;
            }
            &:nth-child(2) {
                opacity: 0.8;
                transition: 2s;
            }
            &:nth-child(3) {
                opacity: 0.6;
                transition: 2.5s;
            }
            &:nth-child(4) {
                opacity: 0;
                transition: 3s;
            }
            &:nth-child(5) {
                opacity: 0;
                transition: 3.5s;
            }
            &:nth-child(6) {
                opacity: 0;
                transition: 4s;
            }
            .content {
                opacity: 0;
                transform: translateY(50px);
                transition: 2s;
                &-inner {
                    text-align: center;
                    &:hover {
                    transition: 1.2s;
                    transform: translateY(-13px);
                    }
                    .inner-text {
                        color: white;
                        position: relative;
                        margin: 20px 0 0 0;
                        font-weight: 700;
                        font-size: 18px;
                        text-transform: uppercase;
                        transition: 0.5s;
                        opacity: 0;
                        
                    }
                    .percent {
                        width: auto;
                        position: relative;
                        box-shadow:  inset 0 0 50px #000;
                        background: #445561;
                        border-radius: 50%;
                        display: flex;
                        justify-content: center;
                        align-items: center;
                        &:hover {
                            background: $secondary-color;
                        }
                        .number {
                            position: absolute;
                            @include display-center;
                            border-radius: 50%;
                            h2 {
                                color: #777;
                                font-weight: 700;
                                font-size: 40px;
                                transition: 0.5s;
                            }
                        }
                    
                    }
                }
            }
            
            &:hover .inner-text {
                color: #dfeff9;
            }
            &:hover .percent .number h2 {
                color: #B5C8CE;
                font-size: 50px;
            }
        }
        &:hover .card {
            position: absolute;
            top: 30%;
            left: 22%;
            opacity: 1;
            box-shadow: 10px 15px 10px rgba(0,0,0,0.2);
            transform: rotate(0deg) skew(0deg,0deg);
            margin-left: calc(15.5% * var(--i));
            .content {
                opacity: 1;
                transform: translateY(0px);
                transition-delay: calc(0.4s * var(--j));
                &-inner {
                    .inner-text {
                        opacity: 1;
                        transition-delay: calc(0.6s * var(--j));
                    }
                }
            }
        }
    }
    svg circle {
        stroke-width: 10;
    }
}
/* ... */

